# ShaOne

./: .gitmodules  CMakeLists.txt  makefile  readme.md
docs/: doxygen.cfg
src/ShaOne/: hash.c  hash.h  sha.h  sha1.c
test/: main.c
